# rustness

./: .gitignore  Cargo.toml  README.md
roms/: nestest.log.txt
src/: main.rs  nes.rs
src/nes/: cpu.rs  mem.rs  palette.rs  ppu.rs
