[package]
name = "rustness"
version = "0.1.0"
authors = ["mrusek <michal.rusiu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston_window = "0.98.0"
piston2d-graphics = "0.35.0"
image = "0.22.3"
gfx = "0.18.1"
piston2d-opengl_graphics = "0.69.0"
